src/index.css
@import url(./reset.css);
@import url(./fonts.css);
@import url(./animations.css);
:root {
  --main-font-family: 'Satoshi';

  /* 
    ---- COLORS ---- 
  */
  /* BLACK COLORS */
  --pure-black: #000;
  --black-950: #0a0a0a;
  --black-900: #18181b;
  --black-800: #262626;
  --black-700: #404040;
  --black-600: #525252;

  /* GRAY COLORS */
  --gray-950: #646464;
  --gray-900: #838383;
  --gray-800: #8d8d8d;
  --gray-700: #bbbbbb;
  --gray-600: #cecece;
  --gray-500: #d9d9d9;
  --gray-400: #e0e0e0;
  --gray-300: #e8e8e8;
  --gray-200: #f0f0f0;
  --gray-100: #f9f9f9;

  /* WHITE COLORS */
  --pure-white: #fff;
  --white-darken: #f0f0f0;
  --white-light: #f9f9f9;
  --white-ligthen: #fcfcfc;

  /* RED COLORS */
  --red-primary: #dc3e42;
  --red-darken: #ce2c31;
  --red-darken-2x: #641723;
  --red-lighten: #e5484d;
  --red-transparency: #f4a9aa;

  /* GREEN COLORS */
  --green-primary: #2b9a66;
  --green-darken: #218358;
  --green-darken-2x: #193b2d;
  --green-lighten: #30a46c;
  --green-transparency: #8eceaa;

  /* PRIMARY COLORS */
  --primary-blue-950: #113264; /* Usage: HIGH CONTRAST TEXT */
  --primary-blue-900: #0d74ce; /* Usage: SECONDARY TEXT AND LINKS */
  --primary-blue-800: #0588f0; /* Usage: SOLID BACKGROUND AND BUTTONS */
  --primary-blue-700: #0090ff; /* Usage: BORDERS, FOCUS RINGS */
  --primary-blue-600: #5eb1ef; /* Usage: BORDERS AND SEPARATORS */
  --primary-blue-500: #8ec8f6; /* Usage: BORDERS AND SEPARATORS */
  --primary-blue-400: #acd8fc; /* Usage: INTERACTIVE COMPONENTS */
  --primary-blue-300: #c2e5ff; /* Usage: INTERACTIVE COMPONENTS */
  --primary-blue-200: #d5efff; /* Usage: INTERACTIVE COMPONENTS */
  --primary-blue-100: #e6f4fe; /* Usage: INTERACTIVE COMPONENTS */
  --primary-blue-50: #f4faff; /* Usage: BACKGROUNDS */
  --primary-amber: #e2a336;
  --primary-amber-dark: #ab6400;
  --primary-amber-dark-2x: #4f3422;
  --primary-amber-lighten: #e9c162;
  --primary-amber-lighten-2x: #f3d673;

  /* BORDER RADIOUS */
  --border-sm: 4px;
  --border-primary: 8px;
  --border-md: 12px;
  --border-lg: 16px;

  /* TRANSITIONS */
  --btn-transition: all 0.3s;
}

div.app-weather {
  min-height: 100dvh;
  display: grid;
  place-content: center;
  background-color: #000;
}

div.app-weather.cloudy {
  background: -moz-linear-gradient(
    141deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(9, 9, 121, 1) 35%,
    rgba(0, 212, 255, 1) 100%
  );
  background: -webkit-linear-gradient(
    141deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(9, 9, 121, 1) 35%,
    rgba(0, 212, 255, 1) 100%
  );
  background: linear-gradient(
    141deg,
    rgba(2, 0, 36, 1) 0%,
    rgba(9, 9, 121, 1) 35%,
    rgba(0, 212, 255, 1) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00d4ff",GradientType=1);
}
div.app-weather.rainy {
  background: rgb(48, 48, 48);
  background: -moz-linear-gradient(
    141deg,
    rgba(48, 48, 48, 1) 0%,
    rgba(102, 102, 130, 1) 35%,
    rgba(163, 163, 163, 1) 100%
  );
  background: -webkit-linear-gradient(
    141deg,
    rgba(48, 48, 48, 1) 0%,
    rgba(102, 102, 130, 1) 35%,
    rgba(163, 163, 163, 1) 100%
  );
  background: linear-gradient(
    141deg,
    rgba(48, 48, 48, 1) 0%,
    rgba(102, 102, 130, 1) 35%,
    rgba(163, 163, 163, 1) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#303030",endColorstr="#a3a3a3",GradientType=1);
}
div.app-weather.sunny {
  background: rgb(203, 75, 22);
  background: -moz-linear-gradient(
    141deg,
    rgba(203, 75, 22, 1) 0%,
    rgba(200, 139, 0, 1) 44%,
    rgba(223, 90, 35, 1) 100%
  );
  background: -webkit-linear-gradient(
    141deg,
    rgba(203, 75, 22, 1) 0%,
    rgba(200, 139, 0, 1) 44%,
    rgba(223, 90, 35, 1) 100%
  );
  background: linear-gradient(
    141deg,
    rgba(203, 75, 22, 1) 0%,
    rgba(200, 139, 0, 1) 44%,
    rgba(223, 90, 35, 1) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#cb4b16",endColorstr="#df5a23",GradientType=1);
}

/* ANIMATIONS */
div.clouds {
  position: absolute;
  top: -350px;
  width: 100%;
  min-height: 100vh;
  background: url(./assets/weather/clouds.png);
  animation: cloudsMovement 300s linear infinite;
  background-size: contain;
  background-repeat: repeat-x;
  z-index: 0;
  opacity: 0.2;
}

body {
  min-height: 100vh;
  font-size: 100%;
  font-family: var(--main-font-family);
  color: var(--white-light);
  line-height: 1.4;
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  font-smooth: always;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/*----TITLES----*/

h1 {
  font-weight: 700;
  font-size: 2rem;
}
h1.h1-lg {
  font-size: 4rem;
}

h2 {
  font-weight: 600;
  font-size: 1.6rem;
}
h3 {
  font-weight: 500;
  font-size: 1.4rem;
}

/*----PARAGRAHP----*/

p {
  line-height: 1.5;
}

/*----BUTTONS----*/

button.btn {
  padding: 12px 24px;
  font-weight: 500;
  font-size: 1rem;
  color: var(--white-light);
  border-radius: var(--border-primary);
}
/* danger btn */
button.btn.btn-danger,
button.btn.btn-danger:visited,
button.btn.btn-danger:link {
  background-color: var(--red-primary);
  border: 2px solid var(--red-lighten);
  transition: var(--btn-transition);
}
button.btn.btn-danger:hover {
  background-color: var(--red-lighten);
  border-color: var(--red-transparency);
}
button.btn.btn-danger:active {
  background-color: var(--red-darken);
  border-color: var(--red-darken-2x);
}
/* success btn */
button.btn.btn-success,
button.btn.btn-success:visited,
button.btn.btn-success:link {
  background-color: var(--green-primary);
  border: 2px solid var(--green-lighten);
  transition: var(--btn-transition);
}

button.btn.btn-success:hover {
  background-color: var(--green-lighten);
  border-color: var(--green-transparency);
}
button.btn.btn-success:active {
  background-color: var(--green-darken);
  border-color: var(--green-darken-2x);
}
/* primary btn */
button.btn.btn-primary,
button.btn.btn-primary:visited,
button.btn.btn-primary:link {
  background-color: var(--primary-blue-800);
  border: 2px solid var(--primary-blue-700);
  transition: var(--btn-transition);
}
button.btn.btn-primary:hover {
  background-color: var(--primary-blue-700);
  border-color: var(--primary-blue-600);
}
button.btn.btn-primary:active {
  background-color: var(--primary-blue-900);
  border-color: var(--primary-blue-950);
}
/* outline primary btn */
button.btn.btn-primary.btn-outline,
button.btn.btn-primary.btn-outline:visited,
button.btn.btn-primary.btn-outline:link {
  background-color: transparent;
  color: var(--primary-blue-800);
  transition: var(--btn-transition);
}
button.btn.btn-primary.btn-outline:hover {
  color: var(--primary-blue-600);
}
button.btn.btn-primary.btn-outline:active {
  color: var(--primary-blue-900);
  border-color: var(--primary-blue-900);
}
/* secondary btn */
button.btn.btn-secondary,
button.btn.btn-secondary:visited,
button.btn.btn-secondary:link {
  background-color: var(--primary-amber);
  border: 2px solid var(--primary-amber-lighten);
  transition: var(--btn-transition);
}

button.btn.btn-secondary:hover {
  background-color: var(--primary-amber-lighten);
  border-color: var(--primary-amber-lighten-2x);
}
button.btn.btn-secondary:active {
  background-color: var(--primary-amber-dark);
  border-color: var(--primary-amber-dark-2x);
}
/* secondary outline btn */
button.btn.btn-secondary.btn-outline,
button.btn.btn-secondary.btn-outline:visited,
button.btn.btn-secondary.btn-outline:link {
  background-color: transparent;
  color: var(--primary-amber);
  border: 2px solid var(--primary-amber);
  transition: var(--btn-transition);
}
button.btn.btn-secondary.btn-outline:hover {
  color: var(--primary-amber-lighten);
  border-color: var(--primary-amber-lighten);
}
button.btn.btn-secondary.btn-outline:active {
  color: var(--primary-amber-dark);
  border-color: var(--primary-amber-dark);
}
/* ----INPUTS---- */
form.form-lg {
  max-width: 500px;
}
label.input-label {
  margin-bottom: 8px;
  font-size: 1.1rem;
  font-weight: 600;
}
input.input {
  color: var(--black-950);
  background-color: transparent;
  width: 100%;
  padding: 12px 16px;
  margin-bottom: 2px;
}
input.input::placeholder {
  color: var(--black-700);
  font-weight: 500;
}

input.input:focus {
  outline-width: 0px;
}
p.input-helper-text {
  color: var(--black-800);
  font-size: 0.9rem;
  min-width: 350px;
  width: 100%;
  line-height: 1.3;
}
p.input-helper-text a.input-helper-text-link,
a.input-helper-text-link:visited,
a.input-helper-text-link:link {
  color: var(--primary-blue-800);
}
p.input-helper-text a.input-helper-text-link:hover {
  color: var(--primary-blue-900);
  text-decoration: underline;
  text-underline-offset: 4px;
}
p.input-helper-text a.input-helper-text-link:active {
  color: var(--primary-blue-950);
}
button.btn.btn-primary.btn-form-full-width {
  margin-top: 12px;
  width: 100%;
}

